--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "tslint": "tslint --project src/**/**/*.ts  src/**/**/*.tsx",
     "stylelint": "stylelint src/**/**/*.ts",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +70,7 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@stylelint/postcss-css-in-js": "^0.37.2",
+    "gh-pages": "^3.2.3",
     "stylelint": "^14.5.1",
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-styled-components": "^0.1.1",
