--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "to-do-list-ts",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://wenhuili-vivid.github.io/to-do-list-ts/s",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
