--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "https://wenhuili-vivid.github.io/to-do-list-ts/s",
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
