--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,7 +5,7 @@
     ],
     "overrides": [
         {
-            "files": ["**/*.ts"],
+            "files": ["src/**/**/*.ts"],
             "customSyntax": "@stylelint/postcss-css-in-js"
         }
     ]
