--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run TsLint
-        run: npm run tslint
+      - name: Run EsLint
+        run: npm run eslint
         
       - name: Run StyleLint
         run: npm run stylelint
