--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Lint
-        run: npm run lint
+      - name: Run EsLint
+        run: npm run eslint
+
+      - name: Run StyleLint
+        run: npm run stylelint
 
       - name: Run PreDeploy
         run: npm run predeploy
