--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "tslint": "tslint --project src/**/**/*.ts  src/**/**/*.tsx",
+    "eslint": "eslint . --ext .ts --ext .tsx src --fix",
     "stylelint": "stylelint src/**/**/*.ts",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
@@ -72,12 +72,14 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@stylelint/postcss-css-in-js": "^0.37.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
     "gh-pages": "^3.2.3",
     "stylelint": "^14.5.1",
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "tslint": "^6.1.3",
     "webpack": "^5.69.1"
   }
 }
