--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "private": false,
   "homepage": "https://wenhuili-vivid.github.io/to-do-list-ts/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -23,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "eslint": "eslint . --ext .ts --ext .tsx src --fix",
     "stylelint": "stylelint src/**/**/*.ts",
@@ -61,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.19.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -72,6 +69,11 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@stylelint/postcss-css-in-js": "^0.37.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
